# miniml_interpreter

./: .gitignore  README.md  dune-project  miniml_interpreter.opam
examples/: abc138_f.ml  reference.ml  variants.ml
src/: dune  eval.ml  lexer.mll  lib.ml  location.ml  main.ml  parser.mly  store.ml  store.mli  syntax.ml  terminal.ml  typing.ml
